# lambda-sqlite-efs

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
cdk/: stack.py
lambdas/graphql/package/: datastore.py  debug.py  main.py  schema.py
lambdas/graphql/package/kvstore/: sqlite.py
lambdas/layer/: requirements.txt
